--- a/timetable/index.html
+++ b/timetable/index.html
@@ -158,7 +158,7 @@
             };
         }
 
-        (async () => {
+        async function loadTimetable() {
             const pastContainer = document.getElementById("past-timetable");
 
             const progress = document.createElement("p");
@@ -236,7 +236,11 @@
                 console.error(e);
                 pastContainer.textContent = "画像一覧の取得に失敗しました。";
             }
-        })();
+        }
+
+        loadTimetable()
+
+        setInterval(loadTimetable, 500)
 
         (async () => {
             const serverStateEl = document.getElementById("server-state");
