--- a/timetable/index.html
+++ b/timetable/index.html
@@ -89,6 +89,10 @@
             <p>サーバー関係の不具合で、2025-12-09〜2025-12-16の時間割が保存されていなかったことに現在(2025-12-18)気が付きました…^^;</p>
             <p>そもそも保存がされていなかったようなので、残念ながら閲覧することができません…</p>
             <p>ご不便をおかけして申し訳ありません。</p>
+            <hr>
+            <p>追記！</p>
+            <p>なぜか知らんけど2025-02-03~2025-02-10までも保存されてなかった…</p>
+            <p>こちらも申し訳ありませんが閲覧できません…</p>
         </section>
         <section>
             <h2>過去の時間割一覧</h2>
